[tool.poetry]
name = "rocketchat-async"
version = "4.3.0"
description = "asyncio-based Python wrapper for the Rocket.Chat Realtime API."
authors = ["Hynek Urban <hynek.urban@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "rocketchat_async"}]
homepage = "https://github.com/hynek-urban/rocketchat-async"
documentation = "https://github.com/hynek-urban/rocketchat-async"
repository = "https://github.com/hynek-urban/rocketchat-async"

[tool.poetry.dependencies]
python = ">=3.7"
websockets = "^10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
